--- a/1ste klas.html
+++ b/1ste klas.html
@@ -24,6 +24,7 @@
                   <a href="2ste klas.html">Tweede klas</a>
                   <a href="3ste klas.html">Derde klas</a>
                   <a href="4deklas.html">Vierde klas</a>
+                  <a href="5deklas.html">Vijfde klas</a>
                 </div>
               </div>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
@@ -33,15 +34,25 @@
             
         </ul>
     </nav>
-    <div class="row">
-      <div class="column">
-        <h3><img src="Pictures/FloriLOGO.jpg" alt="Flori1.html" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Projecten/Flori1.html" class="button3">Lees meer</a></h3>
-      </div>
-      <div class="column">
-        <h3><img src="Pictures/EEE1.jfif" alt="Cobra" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Projecten/Cobra.html" class="button3">Lees meer</a></h3>
-      </div>
+
+    <div class="project-container">
+        <h1>Eerste Klas Projecten</h1>
+        <div class="project-content">
+            <div class="project-section">
+                <div class="image-grid">
+                    <div class="stage">
+                        <h3>Flori Project</h3>
+                        <img src="Pictures/FloriLOGO.jpg" alt="Flori Project Logo" class="project-image">
+                        <a href="Projecten/Flori1.html" class="button3">Lees meer</a>
+                    </div>
+                    <div class="stage">
+                        <h3>Cobra Project</h3>
+                        <img src="Pictures/EEE1.jfif" alt="Cobra Project" class="project-image">
+                        <a href="Projecten/Cobra.html" class="button3">Lees meer</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
