--- a/3ste klas.html
+++ b/3ste klas.html
@@ -24,6 +24,7 @@
                   <a href="2ste klas.html">Tweede klas</a>
                   <a href="3ste klas.html">Derde klas</a>
                   <a href="4deklas.html">Vierde klas</a>
+                  <a href="5deklas.html">Vijfde klas</a>
                 </div>
               </div>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
@@ -35,20 +36,30 @@
         </ul>
     </nav>
       <br><br><br><br><br><br><br><br>
-          <div class="row">
-            <div class="column">
-              <h3><img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/VoedselBos.html" class="button3">Lees meer</a></h3>
+          <div class="project-container">
+            <h1>Derde Klas Projecten</h1>
+            <div class="project-content">
+                <div class="project-section">
+                    <div class="image-grid">
+                        <div class="stage">
+                            <h3>VoedselBos Project</h3>
+                            <img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos Project" class="project-image">
+                            <a href="Projecten/VoedselBos.html" class="button3">Lees meer</a>
+                        </div>
+                        <div class="stage">
+                            <h3>Tino Project</h3>
+                            <img src="Pictures/TinoLOGO.png" alt="Tino Project Logo" class="project-image">
+                            <a href="Projecten/Tino.html" class="button3">Lees meer</a>
+                        </div>
+                        <div class="stage">
+                            <h3>KPN Project</h3>
+                            <img src="Pictures/KPN.jpg" alt="KPN Project" class="project-image">
+                            <a href="Projecten/ProjectKPN.html" class="button3">Lees meer</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="column">
-              <h3><img src="Pictures/TinoLOGO.png" alt="Tino" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/Tino.html" class="button3">Lees meer</a></h3>
-            </div>
-            <div class="column">
-              <h3><img src="Pictures/KPN.jpg" alt="KPN" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/ProjectKPN.html" class="button3">Lees meer</a></h3>
-            </div>
-          </div>
+        </div>
 </body>
 
 </html>
