--- a/5deklas.html
+++ b/5deklas.html
@@ -5,7 +5,7 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
-    <title>Projecten tweede klas</title>
+    <title>Projecten vijfde klas</title>
     <meta name="google-adsense-account" content="ca-pub-6490797898072451">
 </head>
 
@@ -28,28 +28,18 @@
     </nav>
 
     <div class="project-container">
-        <h1>Tweede Klas Projecten</h1>
+        <h1>Vijfde Klas Projecten</h1>
         <div class="project-content">
             <div class="project-section">
                 <div class="image-grid">
                     <div class="stage">
-                        <h3>TJbot Project</h3>
-                        <img src="Pictures/tjbot-ibm-kit.jpg" alt="TJbot IBM Kit" class="project-image">
-                        <a href="Projecten/TJbot.html" class="button3">Lees meer</a>
-                    </div>
-                    <div class="stage">
-                        <h3>VirusKenner Project</h3>
-                        <img src="Pictures/viruskenner_logo-trento.jpg" alt="VirusKenner Logo" class="project-image">
-                        <a href="Projecten/Hanta.html" class="button3">Lees meer</a>
-                    </div>
-                    <div class="stage">
-                        <h3>EMA Project</h3>
-                        <img src="Pictures/electrische-museumtramlijn-amsterdam-tram-ema-haarlemmermeerstation.jpg" alt="EMA Tram Station" class="project-image">
-                        <a href="Projecten/ProjectEMA.html" class="button3">Lees meer</a>
+                        <h3>Project PremiumGolf</h3>
+                        <img src="Pictures/image.png" alt="Project PremiumGolf" class="project-image">
+                        <a href="Projecten/PremiumGolf.html" class="button3">Lees meer</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
-</html>
+</html> 
