--- a/Projecten/VoedselBos.html
+++ b/Projecten/VoedselBos.html
@@ -5,14 +5,11 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
-    <title>VoedselBos</title>
-
+    <title>VoedselBos - VR Ervaring</title>
     <meta name="google-adsense-account" content="ca-pub-6490797898072451">
-
 </head>
 
 <body>
-
     <nav>
         <ul>
             <a href="../index.html" class="button3">Home</a>
@@ -24,41 +21,33 @@
                   <a href="../3ste klas.html">Derde klas</a>
                   <a href="../4deklas.html">Vierde klas</a>
                 </div>
-              </div>
+            </div>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
-            
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
-            crossorigin="anonymous"></script>
-            
         </ul>
     </nav>
-        <center><h1>Voedsel bos</h1>
-        <h2>dit was het eerste project van dit jaar.</h1>
-        <h2>we moesten een voedsel bos maken.<br></h2>
-        <h2>ik zat samen in een team met Xinxin Daniel en Lars.<br></h2>
-        <h2>We deden eerst onderzoek, over wat wat kan en wat niet kan.<br></h2>
-        <h2>Lars en Daniel ging dan een maquete maken, en ik en xinxin ging een VR application maken.</h2>
-        <h2><div><img src="../Pictures/Vconcept.jpg" alt="" style="width:700px;height:400px;"></div></h2>
-        <p>concept art</p>
-        <h2><div><iframe src="../Videos/movie_005.mp4" class="centerImage" alt="" width="852px" height="480px"></iframe></div></h2>
-        <p>VR showcase</p></center>
 
+    <div class="project-container">
+        <h1>VoedselBos VR Ervaring</h1>
+        <div class="project-intro">
+            <h2>Project Overzicht</h2>
+            <p>Dit was het eerste project van het jaar waar we een virtuele voedselbos ervaring creëerden. Samen met Xinxin, Daniel en Lars ontwikkelden we een VR-applicatie die gebruikers in staat stelt om te verkennen en te leren over duurzame voedselproductie in een virtuele bosomgeving.</p>
+        </div>
 
-        <p2>.</p2>
+        <div class="project-content">
+            <div class="project-section">
+                <h2>Concept Ontwerp</h2>
+                <div class="image-grid">
+                    <img src="../Pictures/Vconcept.jpg" alt="VoedselBos Concept Ontwerp" class="project-image">
+                </div>
+            </div>
 
-
-
+            <div class="project-section">
+                <h2>VR Ervaring Showcase</h2>
+                <div class="video-container">
+                    <iframe src="../Videos/movie_005.mp4" class="centerImage" alt="VoedselBos VR Ervaring Demo" width="852" height="480"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-
-</html>
-
-
-
-
-        <p2>.</p2>
-
-
-
-</body>
-
 </html>
