--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="2ste klas.html">Tweede klas</a>
                 <a href="3ste klas.html">Derde klas</a>
                 <a href="4deklas.html">Vierde Klas</a>
+                <a href="5deklas.html">Vijfde klas</a>
               </div>
             </div>
           <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>          
