--- a/4deklas.html
+++ b/4deklas.html
@@ -5,42 +5,46 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
-    <title>Projecten eerste klas</title>
+    <title>Projecten vierde klas</title>
     <meta name="google-adsense-account" content="ca-pub-6490797898072451">
 </head>
 
 <body>
-
     <nav>
         <ul>
-
             <a href="index.html" class="button3">Home</a>
             <div class="dropdown">
                 <a class="dropbtn">Projecten</a>
                 <div class="dropdown-content">
-                  <a href="1ste klas.html">Eerste klas</a>
-                  <a href="2ste klas.html">Tweede klas</a>
-                  <a href="3ste klas.html">Derde klas</a>
-                  <a href="4deklas.html">Vierde klas</a>
+                    <a href="1ste klas.html">Eerste klas</a>
+                    <a href="2ste klas.html">Tweede klas</a>
+                    <a href="3ste klas.html">Derde klas</a>
+                    <a href="4deklas.html">Vierde klas</a>
+                    <a href="5deklas.html">Vijfde klas</a>
                 </div>
-              </div>
+            </div>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
-            
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
-            crossorigin="anonymous"></script>
-            
         </ul>
     </nav>
-    <div class="row">
-      <div class="column">
-        <h3><img src="Pictures/blaashal.png" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Projecten/blaashal.html" class="button3">Lees meer</a></h3>
-      </div>
-      <div class="column">
-        <h3><img src="Pictures/keuze1.JPG" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Projecten/Keuze1.html" class="button3">Lees meer</a></h3>
-      </div>
+
+    <div class="project-container">
+        <h1>Vierde Klas Projecten</h1>
+        <div class="project-content">
+            <div class="project-section">
+                <div class="image-grid">
+                    <div class="stage">
+                        <h3>Blaashal Project</h3>
+                        <img src="Pictures/blaashal.png" alt="Blaashal Energy Project" class="project-image">
+                        <a href="Projecten/blaashal.html" class="button3">Lees meer</a>
+                    </div>
+                    <div class="stage">
+                        <h3>Keuze Project</h3>
+                        <img src="Pictures/keuze1.JPG" alt="Keuze Project - Amstelveen Skatepark" class="project-image">
+                        <a href="Projecten/Keuze1.html" class="button3">Lees meer</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
-
 </html>
