--- a/Projecten/Cobra.html
+++ b/Projecten/Cobra.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="../style.css">
-<link rel="icon" type="EEE1" href="../Pictures/EEE1.jfif">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="EEE1" href="../Pictures/EEE1.jfif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
-    <title>Projecten</title>
-
-
+    <title>Cobra - Project Planning</title>
     <meta name="google-adsense-account" content="ca-pub-6490797898072451">
 </head>
 
 <body>
-
     <nav>
         <ul>
-
             <a href="../index.html" class="button3">Home</a>
             <div class="dropdown">
                 <a class="dropbtn">Projecten</a>
@@ -25,29 +21,33 @@
                   <a href="../3ste klas.html">Derde klas</a>
                   <a href="../4deklas.html">Vierde klas</a>
                 </div>
-              </div>
+            </div>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
         </ul>
     </nav>
 
-    <center><p>onze plan voor scenes</p><br>
-    <h1><iframe src="https://app.milanote.com/1LrzbT1Vw3R4dd?p=65WCcoiwHWP" width="1000" height="600" frameborder="0"></iframe></h1><br>
-    <h1><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT-_IZKIdH0WQF4t_gsotYS4zX9kbX5rv8qEVuq8QKnfh5hS3Da6QdepoFSbm-Zxa3Ul93uCsdWyyvt/embed?start=true&loop=true&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></h1></center>
-        <p2>.</p2>
+    <div class="project-container">
+        <h1>Cobra Project Planning</h1>
+        <div class="project-intro">
+            <h2>Project Overzicht</h2>
+            <p>Dit project omvat het plannen en ontwerpen van scènes voor een interactieve ervaring. Het project maakt gebruik van Milanote voor scèneplanning en Google Slides voor presentaties.</p>
+        </div>
 
+        <div class="project-content">
+            <div class="project-section">
+                <h2>Scène Planning</h2>
+                <div class="project-image">
+                    <iframe src="https://app.milanote.com/1LrzbT1Vw3R4dd?p=65WCcoiwHWP" width="1000" height="600" frameborder="0"></iframe>
+                </div>
+            </div>
 
-
+            <div class="project-section">
+                <h2>Project Presentatie</h2>
+                <div class="project-image">
+                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT-_IZKIdH0WQF4t_gsotYS4zX9kbX5rv8qEVuq8QKnfh5hS3Da6QdepoFSbm-Zxa3Ul93uCsdWyyvt/embed?start=true&loop=true&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-
-</html>
-
-
-
-
-        <p2>.</p2>
-
-
-
-</body>
-
 </html>
