--- a/Projecten/ProjectEMA.html
+++ b/Projecten/ProjectEMA.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="../style.css">
-<link rel="icon" type="2825704.gif" href="2825704.gif">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
-    <title>ProjectEMA</title>
-
-
+    <title>EMA - Ballast Bed Project</title>
     <meta name="google-adsense-account" content="ca-pub-6490797898072451">
 </head>
 
 <body>
-
     <nav>
         <ul>
             <a href="../index.html" class="button3">Home</a>
@@ -24,37 +21,37 @@
                   <a href="../3ste klas.html">Derde klas</a>
                   <a href="../4deklas.html">Vierde klas</a>
                 </div>
-              </div>
+            </div>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
-            
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
-            crossorigin="anonymous"></script>
-            
         </ul>
     </nav>
-        <center><h1>Project EMA</h1>
-        <h1>dit was het laatste project van dit jaar. <br></h1>
-        <h1>dit keer moesten we een ballastbed bedenken voor EMA,<br></h1>
-        <h1> en wij hadden op het idee gekomen met een soort hek.<br></h1>
-        <h1>Het hek is 2 kunstmatige heuvels gemaakt door alleminimum of foam.</h1>
-        <h1><img src="../Pictures/team6.png" alt="" style="width:700px;height:400px;"></h1>
-        <h1><img src="../Pictures/Naamloos.png" alt="" style="width:700px;height:400px;"></h1>
-        <h1><img src="../Pictures/prototypeeee.jpeg" alt="" style="width:700px;height:400px;"></h1></center>
-        <p2>.</p2>
 
+    <div class="project-container">
+        <h1>EMA Ballast Bed Project</h1>
+        <div class="project-intro">
+            <h2>Project Overzicht</h2>
+            <p>Dit was het laatste project van het jaar, waar we een ballast bed oplossing ontwikkelden voor EMA. Ons ontwerp bevatte kunstmatige heuvels gemaakt van aluminium of schuim, wat een innovatieve aanpak bood voor spoorweginfrastructuur.</p>
+        </div>
 
-
+        <div class="project-content">
+            <div class="project-section">
+                <h2>Project Ontwikkeling</h2>
+                <div class="image-grid">
+                    <div class="stage">
+                        <h3>Team Ontwerp</h3>
+                        <img src="../Pictures/team6.png" alt="Team Ontwerp" class="project-image">
+                    </div>
+                    <div class="stage">
+                        <h3>Concept Ontwerp</h3>
+                        <img src="../Pictures/Naamloos.png" alt="Concept Ontwerp" class="project-image">
+                    </div>
+                    <div class="stage">
+                        <h3>Prototype</h3>
+                        <img src="../Pictures/prototypeeee.jpeg" alt="Prototype" class="project-image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-
-</html>
-
-
-
-
-        <p2>.</p2>
-
-
-
-</body>
-
 </html>
