--- a/Projecten/ProjectKPN.html
+++ b/Projecten/ProjectKPN.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="../style.css">
-<link rel="icon" type="2825704.gif" href="2825704.gif">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
-    <title>Project KPN</title>
-
+    <title>KPN - OSINT Onderzoeksproject</title>
     <meta name="google-adsense-account" content="ca-pub-6490797898072451">
-
 </head>
 
 <body>
-
     <nav>
         <ul>
-
             <a href="../index.html" class="button3">Home</a>
             <div class="dropdown">
                 <a class="dropbtn">Projecten</a>
@@ -25,29 +21,26 @@
                   <a href="../3ste klas.html">Derde klas</a>
                   <a href="../4deklas.html">Vierde klas</a>
                 </div>
-              </div>
+            </div>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
-            
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
-            crossorigin="anonymous"></script>
-            
         </ul>
     </nav>
 
-   
-    <center><div class="container">
-        <h1>Dit was het laatste project van leerjaar 3. We kregen een opdracht van KPN, waar we over online bevijliging hadden.</h1>
-        <h1>We moesten leren wat OSINT was, en een OSINT onderzoek doen en daar mee advies geven. OSINT, staat voor open source intelegence. Het is informatie opzoeken met het media, zoals facebook of instagram. </h1>
-        <h1>we kozen om een OSINT onderzoek te doen aan ons natuurkunde leraar, David Tulner. hier onder staat het advies dat we als laatst hadden geschreven.</h1>
-    </div></center>
+    <div class="project-container">
+        <h1>KPN OSINT Onderzoeksproject</h1>
+        <div class="project-intro">
+            <h2>Project Overzicht</h2>
+            <p>Dit was het laatste project van jaar 3, waar we met KPN werkten aan online beveiliging. We leerden over OSINT (Open Source Intelligence) en voerden een OSINT-onderzoek uit om beveiligingsadvies te geven. Ons onderzoek richtte zich op het verzamelen van informatie uit openbare bronnen zoals sociale media om potentiële beveiligingsrisico's te beoordelen.</p>
+        </div>
 
-    <center><h1><embed src="../PDF/Advies.pdf" width="800px" height="2100px" /></h1></center>
-
-
-    <p2>.</p2>
-
-
-
+        <div class="project-content">
+            <div class="project-section">
+                <h2>Onderzoeksresultaten</h2>
+                <div class="project-image">
+                    <embed src="../PDF/Advies.pdf" width="800px" height="2100px" />
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
